--- a/debug.yml
+++ b/debug.yml
@@ -11,4 +11,8 @@
         name: "{{ webpackages }}"
         state: present
 
-  
+    - name: start application
+      service:
+        name: "{{ webpackages }}"
+        state: started
+        enabled: yes
